@@ -1,7 +1,5 @@
 package demo.demo_ecommerce.Controllers;
 
-import java.util.List;
-
 import demo.demo_ecommerce.dtos.OrderDTO;
 import demo.demo_ecommerce.entities.Order;
 import demo.demo_ecommerce.services.OrderService;
@@ -16,6 +14,9 @@ import org.springframework.data.web.PageableDefault;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
+
+import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/users/{userId}/orders")
@@ -35,27 +36,27 @@ public class OrdersController {
     @PostMapping
     public ResponseEntity<?> createOrder(@PathVariable Long userId) {
         try {
-            Order order = orderService.createOrder(userId);
-            // Restituisci il DTO per evitare lazy loading di orderItems
-            return ResponseEntity.status(HttpStatus.CREATED).body(OrderDTO.fromEntity(order));
+            OrderDTO orderDto = orderService.createOrder(userId); // Il service restituisce ora un OrderDTO
+            return ResponseEntity.status(HttpStatus.CREATED).body(orderDto);
         } catch (IllegalArgumentException e) {
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body("Errore: " + e.getMessage());
+            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(e.getMessage());
         }
     }
 
     @Operation(summary = "Elenca tutti gli ordini di un utente")
     @ApiResponses(value = {
-            @ApiResponse(responseCode = "200", description = "Lista di ordini recuperata con successo", content = @Content(schema = @Schema(implementation = List.class))),
+            @ApiResponse(responseCode = "200", description = "Lista di ordini recuperata con successo", content = @Content(schema = @Schema(implementation = Page.class))),
             @ApiResponse(responseCode = "404", description = "Utente non trovato")
     })
     @GetMapping
-    public ResponseEntity<List<OrderDTO>> getUserOrders(@PathVariable Long userId, @PageableDefault(size = 10) Pageable pageable) {
+    public ResponseEntity<?> getUserOrders(@PathVariable Long userId,
+                                           @PageableDefault(size = 10) Pageable pageable) {
         Page<Order> ordersPage = orderService.getOrdersByUserId(userId, pageable);
-        List<OrderDTO> orders = ordersPage.getContent()
-                .stream()
-                .map(OrderDTO::fromEntity) // Conversione tramite il DTO
-                .toList();
-        return ResponseEntity.ok(orders);
+        // Convertiamo ogni ordine in OrderDTO
+        List<OrderDTO> orderDTOs = ordersPage.getContent().stream()
+                .map(OrderDTO::fromEntity)
+                .collect(Collectors.toList());
+        return ResponseEntity.ok(orderDTOs);
     }
 
     @Operation(summary = "Ottieni i dettagli di un singolo ordine")
@@ -64,10 +65,11 @@ public class OrdersController {
             @ApiResponse(responseCode = "404", description = "Ordine non trovato")
     })
     @GetMapping("/{orderId}")
-    public ResponseEntity<?> getOrderById(@PathVariable Long userId, @PathVariable Long orderId) {
+    public ResponseEntity<?> getOrderById(@PathVariable Long userId,
+                                          @PathVariable Long orderId) {
         try {
-            Order order = orderService.getOrderById(userId, orderId);
-            return ResponseEntity.ok(OrderDTO.fromEntity(order));
+            OrderDTO orderDto = orderService.getOrderById(userId, orderId);
+            return ResponseEntity.ok(orderDto);
         } catch (IllegalArgumentException e) {
             return ResponseEntity.status(HttpStatus.NOT_FOUND).body("Ordine non trovato: " + e.getMessage());
         }
